html page design made, events/show and events/list made

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <title>This is the INDEX!</title>
 </head>
 <body>
-<p>Yeah this is index and this test is successful</p>
+
+INDEXYFIED
+
 </body>
+
 </html>
+
