--- a/src/main/resources/templates/clubs/list.html
+++ b/src/main/resources/templates/clubs/list.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Clubs Page</title>
 </head>
 <body>
     This is the clubs list
+
+    <ul th:each="club : ${clubs}">
+        <li th:text="${club.name}"></li>
+        <li th:text="${club.description}"></li>
+    </ul>
 </body>
 </html>
