--- a/src/main/resources/templates/clubs/list.html
+++ b/src/main/resources/templates/clubs/list.html
@@ -10,6 +10,7 @@
     <ul th:each="club : ${clubs}">
         <li th:text="${club.name}"></li>
         <li th:text="${club.description}"></li>
+		<li th:text="${club.id}"></li>
     </ul>
 
 </body>
