--- a/src/main/resources/templates/user/show.html
+++ b/src/main/resources/templates/user/show.html
@@ -1,10 +1,120 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Profile Page</title>
+
+    <link rel="stylesheet" href="../../static/css/userProfilePage.css">
 </head>
 <body>
 
+<section class="navigation">
+    <div class="nav-container">
+        <div class="brand">
+            <a href="#!">Sigma</a>
+        </div>
+        <nav>
+            <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+            <ul class="nav-list">
+                <li>
+                    <a href="#!">Clubs</a>
+                </li>
+                <li>
+                    <a href="#!">Events</a>
+                </li>
+                <li>
+                    <a href="#!">Schedule</a>
+                </li>
+                <li>
+                    <a href="#!">Profile</a>
+                </li>
+                <li>
+                    <a href="#!">Sign Out</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</section>
+
+
+<div class="top">
+    <img>
+    <p>Username</p>
+</div>
+
+
+<div class="middle">
+    <ul class="info">
+        <li>Department: X </li>
+        <li>Date of birth: dd.mm.yyyy </li>
+        <li>Start of studies: 20xx</li>
+        <li>Participated in x events</li>
+    </ul>
+    <ul class="social">
+        <li>firstname.lastname@ug.bilkent.edutr</li>
+        <li>instagramusername</li>
+        <li>linkedinusername</li>
+    </ul>
+</div>
+
+
+<div class="bottom">
+    <div class = "buttons">
+        <button onclick="openEvents()">Events</button>
+        <button onclick="openMemberships()">Active Memberships</button>
+    </div>
+    <div id="line"></div>
+    <div id="events">
+        <table>
+            <tr>
+                <td>
+                    <img>
+                    <p>X Event</p>
+                </td>
+                <td>
+                    <img>
+                    <p>Y Event</p>
+                </td>
+                <td>
+                    <img>
+                    <p>Z Event</p>
+                </td>
+                <td>
+                    <img>
+                    <p>T Event</p>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="memberships">
+        <table>
+            <tr>
+                <td>
+                    <img>
+                    <p>X Event</p>
+                </td>
+                <td>
+                    <img>
+                    <p>Y Event</p>
+                </td>
+                <td>
+                    <img>
+                    <p>Z Event</p>
+                </td>
+                <td>
+                    <img>
+                    <p>T Event</p>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
+
+
+
+<script src="../../static/js/userProfilePage.js"></script>
+
 </body>
+
 </html>
+
