--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>   
-<html>   
+<html xmlns:th="https://www.thymeleaf.org">
 <head>  
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 	<title> Login Page </title>  
@@ -94,17 +94,18 @@
 	</div>
 	<div id="div2">
 	<center><h1>Welcome</h1></center>
-    <form>
+    <form th:action="@{/login}" method="post">
         <div class="container">   
 			<center><h2>Login</h2></center>
             <label>Email</label>   
-            <input type="text" placeholder="" name="email" required>  
+            <input type="email" placeholder="Enter Email" name="email" required>
             <label>Password</label>   
-            <input type="password" placeholder="" name="password" required>  
+            <input type="password" placeholder="Enter Password" name="password" required>
             <button type="submit">Login</button>   
             <input type="checkbox" checked="checked"> Remember me  
-            <a id = "forgot_password" href="#forgot_password">Forgot password? </a>   
-        </div> 
+            <a id = "forgot_password" href="#forgot_password">Forgot password? </a>
+        </div>
+		<div style="color: red">${error}</div>
 	</form>
 	<center style = "font-size: 17px">Don't have an account? <a id = "create_account" href="#register">Create account</a></center>
 	</div> 
