--- a/src/main/resources/templates/clubs/list.html
+++ b/src/main/resources/templates/clubs/list.html
@@ -1,17 +1,66 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/%22%3E">
 <head>
     <meta charset="UTF-8">
     <title>Clubs Page</title>
-</head>
-<body>
-    This is the clubs list
+    <link rel="stylesheet" href="../../static/css/clubsPageCSS.css" />
 
-    <ul th:each="club : ${clubs}">
-        <li th:text="${club.name}"></li>
-        <li th:text="${club.description}"></li>
-		<li th:text="${club.id}"></li>
+    <style>
+        Body {
+            font-family: Calibri, Helvetica, sans-serif;
+            background-color: white;
+            color: #8C8C8C;
+            margin: auto;
+        }
+    </style>
+
+</head>
+
+<body>
+<section class="navigation">
+    <div class="nav-container">
+        <div class="brand">
+            <a href="#!">Sigma</a>
+        </div>
+        <nav>
+            <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+            <ul class="nav-list">
+                <li>
+                    <a href="#!" style="background: #3C6D79">Clubs</a>
+                </li>
+                <li>
+                    <a href="#!">Events</a>
+                </li>
+                <li>
+                    <a href="#!">Schedule</a>
+                </li>
+                <li>
+                    <a href="#!">Profile</a>
+                </li>
+                <li>
+                    <a id="signout" href="#!">Sign Out</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</section>
+
+<div class="square"></div>
+<div class="circle1"></div>
+<div class="parallelog"></div>
+<div class="circle2"></div>
+
+<div class="clubsMainContainer">
+    <ul id="clubsList" th:each="club : ${clubs}">
+        <li class="oneClassElement">
+            <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
+            <a class="clubName" href="" th:text="${club.name}"></a>
+            <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
+                <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
+        </li>
     </ul>
+</div>
 
 </body>
+
 </html>
